--- a/front/src/css/app/app.css
+++ b/front/src/css/app/app.css
@@ -5,3 +5,93 @@ html,
     margin: 0;
     box-sizing: border-box;
 }
+
+/* src/css/pages/homepage.css */
+
+/* Capa de fondo que cubre la aplicación */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro */
+    z-index: 500; /* Z-index debajo del menú */
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
+/* Cuando el overlay está activo */
+.overlay.active {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+/* Estilo para el menú activo */
+.activeMenu {
+    z-index: 1000; /* Z-index superior al de la capa */
+}
+
+/* Animaciones */
+@keyframes slideInVertical {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideOutVertical {
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(-100%);
+    }
+}
+
+@keyframes slideInHorizontal {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideOutHorizontal {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Clase para activar la animación en la capa */
+.overlay.slideInVertical {
+    animation: slideInVertical 0.3s ease-in-out forwards;
+}
+
+.overlay.slideOutVertical {
+    animation: slideOutVertical 0.3s ease-in-out forwards;
+}
+
+.overlay.slideInHorizontal {
+    animation: slideInHorizontal 0.3s ease-in-out forwards;
+}
+
+.overlay.slideOutHorizontal {
+    animation: slideOutHorizontal 0.3s ease-in-out forwards;
+}
