--- a/front/src/css/components/header/header.css
+++ b/front/src/css/components/header/header.css
@@ -100,6 +100,7 @@ html,
     color: white; /* Texto blanco por defecto */
     padding-top: 1.2rem;
     padding-bottom: 1.2rem;
+    border-bottom: 2px solid #dcdcdc;
 }
 
 /* Cambia el fondo y el color del texto y botones al hacer scroll */
